update api schemas
